# webserv

./: .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md  webserv
config/: 42.conf  acoudert.conf  bonus.conf  conf.conf  default.conf  eval_test.conf  fredrika.conf  test.conf  test_internal.conf
data/: index.htm  index.html
data/YoupiBanane/: youpi.bla
docker/: Dockerfile
includes/: CGI.hpp  Client.hpp  Config.hpp  File.hpp  IConfig.hpp  LocationConfig.hpp  MimeTypes.hpp  Request.hpp  RequestConfig.hpp  Response.hpp  Server.hpp  ServerConfig.hpp  StatusCode.hpp  Utils.hpp
includes/Config/: Config.hpp  InputArgs.hpp  RequestConfig.hpp  ServerConfig.hpp
includes/HTTP/: CGI.hpp  Client.hpp  Request.hpp  Response.hpp  Server.hpp
includes/Utils/: Base64.hpp  File.hpp  Logger.hpp  MimeTypes.hpp  StatusCode.hpp  StringUtils.hpp  Utils.hpp  get_next_line.hpp
old/: IConfig.hpp  LocationConfig.cpp  LocationConfig.hpp
srcs/: CGI.cpp  Client.cpp  Config.cpp  Config.hpp  File.cpp  IConfig.hpp  Listen.cpp  Listen.hpp  Location.cpp  Location.hpp  LocationConfig.cpp  LocationConfig.hpp  MimeTypes.cpp  MimeTypes.hpp  Parser.cpp  Parser.hpp  Request.cpp  Request.hpp  RequestConfig.cpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  ServerConfig.cpp  ServerConfig.hpp  StatusCode.cpp  Utils.cpp  Utils.hpp  main.cpp
srcs/Config/: Config.cpp  InputArgs.cpp  RequestConfig.cpp  ServerConfig.cpp
srcs/HTTP/: CGI.cpp  Client.cpp  Request.cpp  Response.cpp  Server.cpp
srcs/Utils/: Base64.cpp  File.cpp  Logger.cpp  MimeTypes.cpp  StatusCode.cpp  StringUtils.cpp  Utils.cpp  get_next_line.cpp
tests/: main.py
www/: index.en.html  index.fr.html  index.html  index.php  index.sh  style.css  upload.php
www/admin/: index.html
www/admin/login/: index.html
www/bonus/: index.html  index.php
www/data/: index.en.html  index.fr.html  index.html
www/error/: 404.html
